[package]
name = "ddsi_log_parser"
version = "0.1.0"
edition = "2021"
description = "Utility to parse ddsi2 logs."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
